sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: reassignment to val
  swap = false
       ^AlgCombSort:7: error: reassignment to val
    swap = false
         ^AlgCombSort:15: error: reassignment to val
        swap = true
             ^AlgCombSort:19: error: missing arguments for method swap in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  } while ((ecart>1)||(swap))
                       ^